load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jfirebaugh/gazelle_etcd
gazelle(name = "gazelle")

go_library(
    name = "gazelle_etcd_lib",
    srcs = ["main.go"],
    importpath = "github.com/jfirebaugh/gazelle_etcd",
    visibility = ["//visibility:private"],
    deps = ["@io_etcd_go_etcd_api_v3//mvccpb"],
)

go_binary(
    name = "gazelle_etcd",
    embed = [":gazelle_etcd_lib"],
    visibility = ["//visibility:public"],
)
